add language to messages, fix language button style

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -4,6 +4,7 @@
     "Home": "Home",
     "Blog": "Blog",
     "Projects": "Projects",
+    "language": "Language",
     "langs": {
       "english": "English",
       "portuguese": "Portuguese",
