--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -4,6 +4,7 @@
     "Home": "Página de inicio",
     "Blog": "Blog",
     "Projects": "Proyectos",
+    "language": "Idioma",
     "langs": {
       "english": "Inglés",
       "portuguese": "Portugués",
