--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -4,6 +4,7 @@
     "Home": "Página inicial",
     "Blog": "Blog",
     "Projects": "Projetos",
+    "language": "Linguagem",
     "langs": {
       "english": "Inglês",
       "portuguese": "Português",
