language name should be in its own language, remove sandwich header button

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -7,8 +7,8 @@
     "language": "Language",
     "langs": {
       "english": "English",
-      "portuguese": "Portuguese",
-      "spanish": "Spanish"
+      "portuguese": "Português",
+      "spanish": "Español"
     }
   }
 }
