--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -6,8 +6,8 @@
     "Projects": "Proyectos",
     "language": "Idioma",
     "langs": {
-      "english": "Inglés",
-      "portuguese": "Portugués",
+      "english": "English",
+      "portuguese": "Português",
       "spanish": "Español"
     }
   }
