--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -6,9 +6,9 @@
     "Projects": "Projetos",
     "language": "Linguagem",
     "langs": {
-      "english": "Inglês",
+      "english": "English",
       "portuguese": "Português",
-      "spanish": "Espanhol"
+      "spanish": "Español"
     }
   }
 }
