adjust resumee, add play font

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -1,6 +1,6 @@
 {
   "en": {
-    "welcome" : "Hi! I'm a brazilian fullstack developer full of curiousity about the world.\nI Currently study computer science and data scraping at Trybe.\nA few projects I've worked used the web conferencing system BigBlueButton and ASAAS API.\nI'm also a Geographer as location data is one of my passions.\nOn the Geography scope, I've done data gathering and analysis for a ridesharing app.\nI've done an essay to map info about Recife's historic center real state market.\nMy college essay was a case study on how to make Recife become a smart city.\nI'm the founder CEO of the junior enterprise MapGeo Júnior.",
+    "welcome" : "Hi! I'm a brazilian fullstack developer with a lot of curiousity about the world. I currently study computer science and data scraping at Trybe. A few projects I've worked used the web conferencing system BigBlueButton and ASAAS API.",
     "Home": "Home",
     "Background": "Background",
     "Skills": "Skills",
