--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -12,6 +12,14 @@
       "english": "English",
       "portuguese": "Português",
       "spanish": "Español"
+    },
+    "background": {
+      "alt1": "un niño clava un globo terráqueo",
+      "title1": "Geógrafo",
+      "subtitle1": "UFPE - 2020",
+      "alt2": "un hombre sentado con una computadora portátil en su regazo",
+      "title2": "Desarrollador de Software",
+      "subtitle2": "Tybe - 2021"
     }
   }
 }
