--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -20,6 +20,18 @@
       "alt2": "un hombre sentado con una computadora portátil en su regazo",
       "title2": "Desarrollador de Software",
       "subtitle2": "Tybe - 2021"
+    },
+    "projects": {
+      "title1": "chat web",
+      "description1": "Un chat web realizado con socket.io, una base de datos en caché en el servidor y una base de datos NoSQL con arquitectura MVC",
+      "title2": "Aplicación de entrega",
+      "description2": "Un proyecto de grupo realizado en dos semanas en Trybe",
+      "title3": "maestro de cocina",
+      "description3": "Proyecto desarrollado en Trybe usando JWT para tokenización de clientes y multer para subir archivos",
+      "title4": "Inventario React",
+      "description4": "Un inventario React similar a Tetris",
+      "title5": "Integración de Kafka y Discord",
+      "description5": "Un produtor y consumidor Kafka que envía mensajes a Discord"
     }
   }
 }
