--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -20,6 +20,18 @@
       "alt2": "um homem sentado com um notebook em seu colo",
       "title2": "Desenvolvedor de Software",
       "subtitle2": "Tybe - 2021"
+    },
+    "projects": {
+      "title1": "Webchat",
+      "description1": "Um web chat feito com socket.io, um banco de dados em cache no servidor e banco de dados NoSQL com arquitetura MVC",
+      "title2": "Aplicativo de entrega",
+      "description2": "Um projeto de grupo feito em duas semanas na Trybe",
+      "title3": "Cozinheiro",
+      "description3": "Projeto desenvolvido na Trybe utilizando JWT para tokenização de cliente e multer para upload de arquivos",
+      "title4": "Inventório React",
+      "description4": "Um inventório React similar ao Tetris",
+      "title5": "Integração Kafka e Discord",
+      "description5": "Um produtor e consumidor do Kafka que envia mensagens para o Discord"
     }
   }
 }
