feat: componentize sections

--- a/content/locales/en.json
+++ b/content/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "welcome": "Hi! I'm a brazilian fullstack developer with a lot of curiousity about the world. I currently study computer science and data scraping at Trybe. A few projects I've worked used the web conferencing system BigBlueButton and ASAAS API.",
+  "welcome": "Full Stack Developer and Geographer passionately trying to solve world problems through software development.\nI'm experienced working with Node.js servers, Next.js pages and Postgres and Mongo databases. I have experience being an entrepreneur and founding a junior company, so for me, business logic and product value are the most important aspects of a product.\nIf you see me in a team, I'm most of the time the person mediating the conflict through reasoning and trying my best to reconcile both points of view. People usually see me as someone who synthesizes ideas well.",
   "home": "Home",
   "background-title": "Background",
   "skills": "Skills",
