revamp portfolio design

--- a/content/locales/en.json
+++ b/content/locales/en.json
@@ -7,7 +7,7 @@
   "skills": "Skills",
   "experience": "Experience",
   "projects-title": "Projects",
-  "contact": "Contact",
+  "contact": "Contact me on",
   "language": "Language",
   "english": "English",
   "portuguese": "Português",
