--- a/content/locales/es.json
+++ b/content/locales/es.json
@@ -7,7 +7,7 @@
   "skills": "Habilidades",
   "experience": "Experiencia",
   "projects-title": "Proyectos",
-  "contact": "Contacto",
+  "contact": "Me contacta en",
   "language": "Idioma",
   "english": "English",
   "portuguese": "Português",
