--- a/content/locales/pt.json
+++ b/content/locales/pt.json
@@ -7,7 +7,7 @@
   "skills": "Habilidades",
   "experience": "Experiência",
   "projects-title": "Projetos",
-  "contact": "Contato",
+  "contact": "Entra em contato por",
   "language": "Linguagem",
   "english": "English",
   "portuguese": "Português",
